<resources>
    <string name="app_name">Scrum Simulator</string>
    <string name="button_exit">Войти</string>
    <string name="button_to_register">Регистрация</string>
    <string name="user_name">Логин</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="v_password">Подтвердите пароль</string>
    <string name="button_get_register">Зарегистрироваться</string>
    <string name="button_save">Сохранить</string>
    <string name="button_assign">Взять</string>
    <string name="button_assign_problem">Выбрать</string>
    <string name="button_assign_solution">Выбрать</string>
    <string name="button_work">Работа</string>
    <string name="button_solve">Решить</string>
    <string name="button_main">Завершить обсуждение</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="button_to_team_manage">команда</string>
    <string name="game_how_to_play">
        Добро пожаловать!
        Еслы Вы новичок Scrum то Вам сюда.
        Вам предстоит пройти симуляцию, где вы будете совместно с командой работать над проектом.
        В начале спланируйте спринт. Затем выберите задачу и произведите работу.
        Во время симуляции могут случаться проблемы. Решайте их на собраниях в конце спринта.
        Постарайтесь сделать как можно задач и предоставить заказчику лучших продукт!
        Удачи!
    </string>
    <string name="project_description">
        Заказчик хочет организовать почтовый сервис внутри своей компании.
        Для этого он обратился к Вам. После долгих обсуждений,
        был выдвинут список требований с приоритетностью.
        Постарайтесь сделать как можно больше за 3 спринта!
    </string>
</resources>